
SUBDIRS = src 
EXTRA_DIST = example example/*

CLEANFILES = core *.core *~
MAINTAINERCLEANFILES = \
	aclocal.m4 install-sh mkinstalldirs missing depcomp \
	configure config.guess config.sub config.h.in \
	ltconfig ltmain.sh \
	INSTALL COPYING Makefile.in stamp-h.in

DISTCLEANFILES = autoconf.h stamp-auto-h autom4te*.cache

